# ArrayClass

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cmake  install.sh
include/: Array.h  IntArray.h
src/: main.cpp
test/: Test.cpp
